fix: fix drawer and navbar z-index

--- a/src/assets/styles/layout/_drawer.scss
+++ b/src/assets/styles/layout/_drawer.scss
@@ -7,8 +7,7 @@
   transform: translateX(0px);
   transition: 0.4s ease-in;
   background-color: $primary-background-color;
-  z-index: 1050;
-  // z-index: 1060;
+  z-index: 1020;
 }
 .drawer-wrapper::-webkit-scrollbar {
   display: none;
