--- a/src/assets/styles/layout/_navbar.scss
+++ b/src/assets/styles/layout/_navbar.scss
@@ -1,6 +1,6 @@
 .__navbar-wrapper {
     min-width: 100%;
-    z-index: 1060;
+    z-index: 1030;
     position: fixed;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     background: #fff;
